ARC-3337: Avoid too much spacing below the icon when no image is available

--- a/src/modules/visitor-space/components/MaterialCard/MaterialCard.module.scss
+++ b/src/modules/visitor-space/components/MaterialCard/MaterialCard.module.scss
@@ -67,7 +67,7 @@ $material-card-list-view-height: 10rem;
 			justify-content: space-between;
 			min-height: 0;
 			display: flex;
-			padding-bottom: 0;
+			margin-bottom: 0;
 
 			&__children {
 				position: relative;
